<resources>
    <!-- Activity titles -->
    <string name="title_activity_placemark_list">Placemarks</string>
    <string name="title_activity_placemark">Placemark</string>
    <string name="title_activity_location">Placemark</string>
    <string name="title_activity_login">Signup/Login to Placemark</string>
    <string name="title_activity_map">Map</string>

    <!-- Metadata-->
    <string name="app_name">Placemark</string>

    <!-- Buttons -->
    <string name="button_addImage">Add image</string>
    <string name="button_changeImage">Change image</string>
    <string name="button_location">Set Location</string>

    <!-- Menu -->
    <string name="menu_addPlacemark">Add</string>
    <string name="menu_savePlacemark">Save</string>
    <string name="menu_cancelPlacemark">Cancel</string>
    <string name="menu_deletePlacemark">Delete</string>
    <string name="menu_showPlacemarksLocation">Show Placemarks locations</string>
    <string name="menu_saveLocation">Save</string>

    <!-- Hints -->
    <string name="hint_placemarkTitle">Placemark Title</string>
    <string name="hint_placemarkDescription">Placemark Description</string>

    <!-- Toasts -->
    <string name="toast_enterPlacemarkTitle">Please Enter a title</string>

    <!-- Titles -->
    <string name="title_select_placemark_image">Select Placemark Image</string>

    <!-- Content descriptions -->
    <string name="cdesc_placemarkImage">Placemark image</string>
    <string name="title_activity_map">Map</string>

    <!-- Placeholder -->
    <string name="placemark_image_placeholder">Placemark Image</string>
    <string name="placemark_title_placeholder">Placemark Title</string>
    <string name="placemark_description_placeholder">Placemark Description</string>

    <!-- TextViews -->
    <string name="tv_lat">Lat</string>
    <string name="tv_lng">Lng</string>
    <string name="title_activity_login_view">loginView</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
</resources>