<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="de.tp.placemark.views.placemark.PlacemarkView">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:fitsSystemWindows="true"
            app:elevation="0dip"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarPlacemarkView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:titleTextColor="@color/colorPrimary" />

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!-- before refactoring of layout
            <Button
                android:id="@+id/btnChooseImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@color/colorAccent"
                android:paddingBottom="8dp"
                android:paddingTop="8dp"
                android:text="@string/button_addImage"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"/>
            -->

            <!-- before refactoring of layout
            <Button
                android:id="@+id/btnSetLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@color/colorAccent"
                android:paddingBottom="8dp"
                android:paddingTop="8dp"
                android:stateListAnimator="@null"
                android:text="@string/button_location"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"/>
            -->

            <!-- before refactoring of layout
            <Button
                android:id="@+id/btnAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@color/colorAccent"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:stateListAnimator="@null"
                android:text="@string/button_addPlacemark"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp" />
            -->

            <!-- before refactoring of layout
            <EditText
                android:id="@+id/placemarkTitle"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_margin="8dp"
                android:autofillHints=""
                android:hint="@string/hint_placemarkTitle"
                android:inputType="text"
                android:maxLength="25"
                android:maxLines="1"
                android:padding="8dp"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp" />
            -->

            <Button
                android:id="@+id/btnChooseImage"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:background="@color/colorAccent"
                android:text="@string/button_addImage"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@+id/placemarkImage"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/placemarkDescription" />

            <EditText
                android:id="@+id/placemarkTitle"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="64dp"
                android:autofillHints=""
                android:hint="@string/hint_placemarkTitle"
                android:inputType="text"
                android:maxLength="25"
                android:maxLines="1"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp"
                app:layout_constraintBottom_toTopOf="@+id/placemarkDescription"
                app:layout_constraintEnd_toEndOf="@+id/placemarkDescription"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!-- before refactoring of layout
            <EditText
                android:id="@+id/placemarkDescription"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_margin="8dp"
                android:autofillHints=""
                android:hint="@string/hint_placemarkDescription"
                android:inputType="text"
                android:maxLength="25"
                android:maxLines="1"
                android:padding="8dp"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp" />
            -->

            <EditText
                android:id="@+id/placemarkDescription"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="8dp"
                android:autoLink="phone"
                android:hint="@string/hint_placemarkDescription"
                android:importantForAutofill="no"
                android:inputType="text"
                android:maxLength="25"
                android:maxLines="1"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp"
                app:layout_constraintEnd_toStartOf="@+id/tvLng"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/placemarkTitle" />

            <ImageView
                android:id="@+id/placemarkImage"
                android:layout_width="0dp"
                android:layout_height="250dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/cdesc_placemarkImage"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnChooseImage"
                app:srcCompat="@drawable/ic_launcher_background" />

            <com.google.android.gms.maps.MapView
                android:id="@+id/mapViewPV"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/placemarkImage" />

            <EditText
                android:id="@+id/etLat"
                android:layout_width="100dp"
                android:layout_height="0dp"
                android:layout_marginEnd="8dp"
                android:ems="10"
                android:inputType="number"
                android:text="00.000000"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@+id/placemarkTitle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/placemarkTitle" />

            <EditText
                android:id="@+id/etLng"
                android:layout_width="100dp"
                android:layout_height="0dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="8dp"
                android:ems="10"
                android:inputType="number"
                android:text="00.000000"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@+id/placemarkDescription"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/tvLng"
                app:layout_constraintTop_toBottomOf="@+id/placemarkTitle" />

            <TextView
                android:id="@+id/tvLng"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:text="@string/tv_lng"
                app:layout_constraintBaseline_toBaselineOf="@+id/placemarkDescription"
                app:layout_constraintEnd_toStartOf="@+id/etLng"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/placemarkDescription" />

            <TextView
                android:id="@+id/tvLat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:text="@string/tv_lat"
                app:layout_constraintBaseline_toBaselineOf="@+id/placemarkTitle"
                app:layout_constraintEnd_toStartOf="@+id/etLat"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@+id/tvLng" />

            <!-- before refactoring of layout
            <ImageView
                android:id="@+id/placemarkImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@mipmap/ic_launcher"/>
            -->
        </androidx.constraintlayout.widget.ConstraintLayout>


    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>